网络数据可视化（还差网络健康分数趋势统计)

--- a/Manager/src/application/admin/view/tincui/netmanagement/index.html
+++ b/Manager/src/application/admin/view/tincui/netmanagement/index.html
@@ -74,7 +74,7 @@
         <div class="tab-pane fade active in">
             <div class="widget-body no-padding">
             <div  id="title" style="text-align: center;">
-                <h2 style="font-weight:600">内网管理</h2>
+                <h2 style="font-weight:600">Tinc服务端</h2>
                 <div style="margin:1rem auto; width:120px; height:3px; background:linear-gradient(90deg, rgba(208,222,255,0.5), #2c6ed5, rgba(208,222,255,0.5));"></div>
             </div>
             <div id="toolbar" class="toolbar">
