--- a/Manager/src/application/admin/view/tincui/nodemanagement/index.html
+++ b/Manager/src/application/admin/view/tincui/nodemanagement/index.html
@@ -78,7 +78,7 @@
         <div class="tab-pane fade active in">
             <div class="widget-body no-padding">
             <div  id="title" style="text-align: center;">
-                <h2>用户节点管理</h2>
+                <h2>Tinc客户端</h2>
                 <br>
                 <br>
             </div>
