修改了客户端配置文件获取接口和配置文件交换接口。简单编写客户端并配合管控端和接入端通过了Tinc自动化部署的测试。

--- a/Manager/src/application/admin/view/tincui/nodemanagement/add.html
+++ b/Manager/src/application/admin/view/tincui/nodemanagement/add.html
@@ -601,7 +601,7 @@
     <div class="form-group">
         <label class="col-xs-12 col-sm-2 control-label">密码:</label>
         <div class="col-xs-12 col-sm-8">
-            <input type="password" class="form-control">  <!-- 已具备新交互效果 -->
+            <input id="c-password" type="password" name="row[password]" class="form-control">  <!-- 已具备新交互效果 -->
         </div>
     </div>
 
