--- a/Manager/src/application/admin/view/tincui/nodemanagement/index.html
+++ b/Manager/src/application/admin/view/tincui/nodemanagement/index.html
@@ -16,7 +16,7 @@
         color: #1a3658;
         font-weight: 600;
         background: linear-gradient(90deg, #1a4d8f, #2c6ed5);
-        -webkit-background-clip: text;
+      -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         padding-bottom: 10px;
     }
@@ -78,7 +78,7 @@
         <div class="tab-pane fade active in">
             <div class="widget-body no-padding">
             <div  id="title" style="text-align: center;">
-                <h2>Tinc客户端</h2>
+                <h2>Tinc节点集群管理</h2>
                 <br>
                 <br>
             </div>
